...
            </View>
          ))}
        </ScrollView>

        <View style={styles.buttonRow}>
          <PrimaryButton
            accessibilityLabel="ignoredCourseAcknowledge"
            testID={testID ? `${testID}-confirm` : undefined}
            label={t('education.ignored_course_ok')}
            onPress={onAcknowledge}
          />
        </View>
      </View>
...
